@startuml
abstract class zoo.Animal {
- String name
- int age
~ {abstract}String makeSound()
}


class zoo.Elephant {
~ String makeSound()
+ void eat(String)
}

class zoo.ZooApp {
+ {static} void main(String[])
}

interface zoo.Feedable {
+ void eat(String)
}

class zoo.Lion {
~ String makeSound()
+ void eat(String)
}

abstract class zoo.Mammal {
- boolean hasFur
}


class zoo.Parrot {
~ String makeSound()
+ void eat(String)
}



zoo.Feedable <|.. zoo.Elephant
zoo.Mammal <|-- zoo.Elephant
zoo.Feedable <|.. zoo.Lion
zoo.Mammal <|-- zoo.Lion
zoo.Animal <|-- zoo.Mammal
zoo.Feedable <|.. zoo.Parrot
zoo.Animal <|-- zoo.Parrot
zoo.Elephant <|-- zoo.ZooApp
zoo.Parrot <|-- zoo.ZooApp
zoo.Lion <|-- zoo.ZooApp
@enduml